styles/header.css
header {
  display: flex;
  position: fixed;
  height: 56px;
  background-color: white;
  top: 0;
  left: 0;
  right: 0;
  justify-content: space-between;
}

.left-section {
  display: flex;
  align-items: center;
}

.hamb-menu-icon, 
.yt-logo {
  margin-left: 24px;
  height: 50%;
  cursor: pointer;
}

.right-section {
  display: flex;
  align-items: center;
}

.upload-icon, 
.notifications-icon {
  height: 50%;
  margin-right: 30px;
  cursor: pointer;
}

.current-channel {
  height: 60%;
  border-radius: 50%;
  margin-right: 30px;
  cursor: pointer;
}

.middle-section {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-left: 42px;
  padding-right: 42px;
  max-width: 600px;
}

.voice-search-button {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 38px;
  width: 38px;
  border-radius: 50%;
  border: none;
  margin-left: 15px;
  cursor: pointer;
}

.search-container {
 display: flex;
 max-width: 500px;
}

.search-button {
  height: 36px;
  width: 55px;
  border: 1px solid gray;
  display: flex;
  justify-content: center;
  border-radius: 0px 18px 18px 0px;
  margin-left: -2px;
  cursor: pointer;
}

.search-input {
  border: 1px solid gray;
  border-radius: 18px 0px 0px 18px;
  padding-left: 10px;
  font-size: 16px;
  width: 0;
  height: 32px;
  flex:  1;
}

